syntax = "proto3";

option go_package = "github.com/FelipeSoft/home-broker-order-service/internal/infrastructure/grpc/proto";

package limit_order_service;

import "google/protobuf/empty.proto";

service LimitOrderService {
  rpc BuyOrderByLimitValue(BuyOrderByLimitValueRequest)
      returns (google.protobuf.Empty) {}
  rpc SellOrderByLimitValue(SellOrderByLimitValueRequest)
      returns (google.protobuf.Empty) {}
}

message BuyOrderByLimitValueRequest {
  string ticker = 1;
  string min_price = 2;
  string max_price = 3;
  string quantity = 4;
  int64 user_id = 5;
}

message SellOrderByLimitValueRequest {
  string ticker = 1;
  string min_price = 2;
  string max_price = 3;
  string quantity = 4;
  int64 user_id = 5;
}
